deck_deployment.yaml
---
  apiVersion: apps/v1
  kind: Deployment
  metadata:
    namespace: default
    name: deck
    labels:
      app: deck
  spec:
    replicas: 2
    strategy:
      type: RollingUpdate
      rollingUpdate:
        maxSurge: 1
        maxUnavailable: 1
    selector:
      matchLabels:
        app: deck
    template:
      metadata:
        labels:
          app: deck
      spec:
        serviceAccountName: "deck"
        terminationGracePeriodSeconds: 30
        containers:
        - name: deck
          image: gcr.io/k8s-prow/deck:v20200520-e1124f454
          args:
          - --config-path=/etc/config/config.yaml
          - --plugin-config=/etc/plugins/plugins.yaml
          - --tide-url=http://tide/
          - --hook-url=http://hook:8888/plugin-help
          - --github-token-path=/etc/github/oauth
          - --plugin-config=/etc/plugins/plugins.yaml
          - --github-oauth-config-file=/etc/githuboauth/secret
          - --oauth-url=/github-login
          - --cookie-secret=/etc/cookie/secret
          - --spyglass=true
          - --show-hidden=true # TODO
          ports:
            - name: http
              containerPort: 8080
          volumeMounts:
          - name: config
            mountPath: /etc/config
            readOnly: true
          - name: oauth
            mountPath: /etc/github
            readOnly: true
          - name: plugins
            mountPath: /etc/plugins
            readOnly: true
          - name: oauth-config
            mountPath: /etc/githuboauth
            readOnly: true
          - name: cookie-secret
            mountPath: /etc/cookie
            readOnly: true
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8081
            initialDelaySeconds: 3
            periodSeconds: 3
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 3
            timeoutSeconds: 600
        volumes:
        - name: config
          configMap:
            name: config
        - name: oauth
          secret:
            secretName: oauth-token
        - name: plugins
          configMap:
            name: plugins
        - name: oauth-config
          secret:
            secretName: github-oauth-config
        - name: cookie-secret
          secret:
            secretName: cookie
