svc-healthz.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: default
  name: deck-healthz
spec:
  selector:
    app: deck
  ports:
  - port: 8081
    targetPort: 8081
  type: NodePort
