ing.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: default
  name: ing-prow
  annotations:
    ilb.idcfcloud.com/sslcert-id: "8cf29e6e-44f2-4c86-adb0-2bdd1e5c5c3e"
    ilb.idcfcloud.com/sslpolicy-id: "407066bb-82d4-4f4b-9a59-9596e7a7c761"
    ilb.idcfcloud.com/redirect-to-https: "true"
spec:
  backend: # specify the default backend for `ingress-gce` (https://cloud.google.com/kubernetes-engine/docs/concepts/ingress#default_backend)
    serviceName: deck
    servicePort: 80
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: deck
          servicePort: 80
      - path: /healthz
        backend:
          serviceName: deck-healthz
          servicePort: 8081
      - path: /hook
        backend:
          serviceName: hook
          servicePort: 8888
